Make basic search box

--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <label for="searchBox">Search Box:</label>
+      <input type="text" id="searchBox">
+      <button type="button">search</button>
+    </form>
+  </body>
 </html>
