Add minimum weather display

--- a/src/template.html
+++ b/src/template.html
@@ -11,5 +11,6 @@
       <input type="text" id="searchBox">
       <button type="button">search</button>
     </form>
+    <div class="result"></div>
   </body>
 </html>
