Layout the page properly

--- a/src/template.html
+++ b/src/template.html
@@ -6,10 +6,11 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="nav">Weather Forecast</div>
     <form>
-      <label for="searchBox">Search Box:</label>
+      <label for="searchBox" id="searchLabel">Search Box:</label>
       <input type="text" id="searchBox">
-      <button type="button">search</button>
+      <button type="button" class="searchBtn">search</button>
     </form>
     <div class="result">
       <div class="result1">Location:<span class="location"></span></div>
