Apply static styling

--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,9 @@
   <body>
     <div class="nav">Weather Forecast</div>
     <form>
-      <label for="searchBox" id="searchLabel">Search Box:</label>
+      <label for="searchBox" id="searchLabel">Set Location:</label>
       <input type="text" id="searchBox">
-      <button type="button" class="searchBtn">search</button>
+      <button type="button" class="searchBtn">Get Weather</button>
     </form>
     <div class="result">
       <div class="result1">Location:<span class="location"></span></div>
