Add temp unit toggle feature
-make toggle btn
-make the btn work

--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,7 @@
       <div class="result1">Location:<span class="location"></span></div>
       <div class="result2">Date:<span class="date"></span></div>
       <div class="result3">Weather:<span class="weather"></span></div>
-      <div class="result4">Temperature:<span class="temp"></span></div>
+      <div class="result4">Temperature:<span class="temp"></span><span class="tempUnit">get Fahrenheit</span></div>
       <div class="result5">Feels like:<span class="feel"></span></div>
       <div class="result6">Overview:<span class="overview"></span></div>
     </div>
